<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- 继承 Spring Boot BOM，统一管理依赖版本 -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.13</version>
        <relativePath/>
    </parent>

    <groupId>com.gofu</groupId>
    <artifactId>gofu-ai</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>GOFU-AI</name>
    <description>电商全业务流程自动化统一中枢（云端生图 + 本地上新）</description>

    <!-- 聚合三个子模块。模块边界即护栏：跨模块只能依赖 gofu-shared 契约。 -->
    <modules>
        <module>gofu-shared</module>
        <module>gofu-server-cloud</module>
        <module>gofu-client-local</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- 第三方库版本集中管理，子模块只声明 artifact 不写版本 -->
        <okhttp.version>4.12.0</okhttp.version>
        <poi.version>5.3.0</poi.version>
        <sqlite-jdbc.version>3.46.1.0</sqlite-jdbc.version>
        <dashscope.version>2.19.1</dashscope.version>
        <cos-api.version>5.6.227</cos-api.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 模块内部互相引用：cloud / local 依赖 shared 契约 -->
            <dependency>
                <groupId>com.gofu</groupId>
                <artifactId>gofu-shared</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>${sqlite-jdbc.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>dashscope-sdk-java</artifactId>
                <version>${dashscope.version}</version>
            </dependency>
            <dependency>
                <groupId>com.qcloud</groupId>
                <artifactId>cos_api</artifactId>
                <version>${cos-api.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
